--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^11.2.0",
     "vue": "^3.5.12"
   },
   "devDependencies": {
